// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deploy from empty to default definition 1`] = `
"

Your project cj8be5ct201is0140cq7qp23b of env dev was successfully updated.
Here are the changes:


Types

  User
   + A new type with the name \`User\` is created.
   ├── +  A new field with the name \`createdAt\` and type \`DateTime!\` is created.
   └── +  A new field with the name \`updatedAt\` and type \`DateTime!\` is created.

Permissions

  Wildcard Permission
   ? The wildcard permission for all types is added.

"
`;

exports[`deploy to local instance 1`] = `
"


Success! Created the following project:


Types

  User
   + A new type with the name \`User\` is created.
   ├── +  A new field with the name \`createdAt\` and type \`DateTime!\` is created.
   └── +  A new field with the name \`updatedAt\` and type \`DateTime!\` is created.

Permissions

  Wildcard Permission
   ? The wildcard permission for all types is added.

"
`;
